2011-11-30 Kazuhiko
* add WebSite_viewSiteMapAsXML that returns the XML sitemap defined in http://www.sitemaps.org/protocol.html .

2011-09-28 Kazuhiko
* support domain_tree and report_tree in WebSection_getDocumentValueList.

2011-02-22 Kazuhiko
* remove portal_type configuration from listbox of WebSection_viewAsWeb,  WebSection_viewContent and WebSection_viewContentList.

2010-10-08 kazuhiko
* no longer allow Access contents information and View for Anonymous, because there is no reason to allow anonymous users to access web_site_module itself. we should publish Web Site document if we want to publish it.

2010-09-22 kazuhiko
* use Web Section's url in WebSection_getPermanentURL script, if it is called against a document.

2010-03-05 fabien
* fix caches id bug. Now caches should works much better.

2010-02-02 fabien
* remove WebSection_getPermanentURLForView which was bad (see bug #1507) and use getPermanentUrl() from WebSection.py.
* WebSection_getPermanentUrl script is not used anymore (and should never be used, it should be called only by getPermanentUrl() from WebSection.py). Now by default, getPermanentUrl(document) always return a link to html content. If you want to get a link to a file (ie. openoffice document, pdf document, ...) you should explicitly specify it :
getPermanentUrl(document, view=False)

2010-01-22 nicolas
* Update configuration of Caching Policy Manager to fill Last-Modified Header with modification_date.
* Web Site and Web Section are not using Caching Policy Manager
* Use getPortalWebDocumentTypeLits instead of Hardcoded portal_type

2009-10-16 rafael
* Update for the changes of new portal types of portal types.

2009-09-11 yusei
* Fix action orders of web page module and make view action first. Otherwise module list method does not work.
* Add bt/template_registered_skin_selection_list to business template.

2009-08-21 Kazuhiko
* add WebSection_viewToolbarWidget that can be used for all web sites with the same appearance.
